2003-09-23  Hidetoshi Tajima  <hidetoshi.tajima@sun.com>

	* libgnome/gnome-init.c: make --help work with popt-1.7.
	Fix bug 123052.

2003-09-01  Anders Carlsson  <andersca@gnome.org>

	* configure.in: Release 2.4.0

	* schemas/Makefile.am (schema_in_files): Ship
	.schemas in tarball since that's what everyone else is doing.

li2003-09-01  Laurent Dhima  <laurenti@alblinux.net>

	* configure.in: Added "sq" to ALL_LINGUAS.
	
2003-08-26  Frederic Crozat  <fcrozat@mandrakesoft.com>

	* schemas/Makefile.am:
	Ship .schemas.in in tarball, not .schemas.

2003-08-25  Anders Carlsson  <andersca@gnome.org>

	* configure.in: Release 2.3.7

2003-08-25  Alexander Larsson  <alexl@redhat.com>

	* schemas/desktop_gnome_url_handlers.schemas.in:
	Add http url handlers.

2003-08-17  Paisa Seeluangsawat  <paisa@users.sf.net>

        * configure.in: Added Thai (th) to ALL_LINGUAS.

2003-08-11  Anders Carlsson  <andersca@codefactory.se>

	* configure.in: Release 2.3.6

2003-07-23  Gustavo J. A. M. Carneiro  <gustavo@users.sourceforge.net>

	* libgnome/gnome-program.c (gnome_program_initv): Don't create new
	pointer arrays for program_module_list and program_modules if such
	arrays already exist, which may happen if
	gnome_program_module_register() has been called directly by the
	programmer.

2003-07-11  Dennis Cranston <dennis_cranston at yahoo com>

	Fixes for ui-review bug number 99533.
	
	* gnome-data/gtk-events-2.soundlist.in:  
	  s/Action button click/Click on command button,
	  s/Check box toggled/Select check box,
	  s/Menu item activation/Choose menu item.
	
	* gnome-data/gnome-2.soundlist.in:
	  s/GNOME system events/System events,
	  s/Error Messages/Error message,
	  s/Informational Messages/Informational message,
	  s/Login/Log in,
	  s/Logout/Log out,
	  s/Miscellaneous Messages/Miscellaneous message,
	  s/Question Dialogs/Question dialog,
	  s/Warning Messages/Warning message.

2003-07-10  Kjartan Maraas  <kmaraas@gnome.org>
