@@ -1,3 +1,8 @@
+2003-10-27   Mark Finlay <sisobATtuxfamilyDOTorg>
+
+	* schemas/desktop_gnome_background.schemas.in:
+	Change default background color.
+
 2003-09-23  Hidetoshi Tajima  <hidetoshi.tajima@sun.com>
 
 	* libgnome/gnome-init.c: make --help work with popt-1.7.
